@@ -55,6 +55,11 @@ void Window::unset_sm_client_id()
   gdk_set_sm_client_id(0 /* see GDK docs */);
 }
 
+void Window::set_icon(const Glib::RefPtr<Window>& icon_window, const Glib::RefPtr<Pixmap>& pixmap)
+{
+  gdk_window_set_icon(gobj(), icon_window->gobj(), pixmap->gobj(), 0); /* See GDK docs */  
+}
+  
 void Window::unset_icon()
 {
   gdk_window_set_icon(gobj(), 0, 0, 0); /* See GDK docs */
