@@ -136,9 +136,11 @@ public:
   _WRAP_METHOD(GList* peek_children(), gdk_window_peek_children)
   _WRAP_METHOD(EventMask get_events() const, gdk_window_get_events)
   _WRAP_METHOD(void set_events(EventMask event_mask), gdk_window_set_events)
+
+  //TODO: Use C++ container:
   _WRAP_METHOD(void set_icon_list(GList* pixbufs), gdk_window_set_icon_list)
   _WRAP_METHOD(void set_icon(const Glib::RefPtr<Window>& icon_window, const Glib::RefPtr<Pixmap>& pixmap, const Glib::RefPtr<Bitmap>& mask), gdk_window_set_icon)
-  //TODO Add void set_icon(const Glib::RefPtr<Window>& icon_window, const Glib::RefPtr<Pixmap>& pixmap);
+  void set_icon(const Glib::RefPtr<Window>& icon_window, const Glib::RefPtr<Pixmap>& pixmap);
   void unset_icon();
   _WRAP_METHOD(void set_icon_name(const Glib::ustring& name), gdk_window_set_icon_name)
   _WRAP_METHOD(void set_group(const Glib::RefPtr<Window>& leader), gdk_window_set_group)
