@@ -45,7 +45,8 @@ public:
   _WRAP_METHOD(Gtk::Widget* create_tool_item(), gtk_action_create_tool_item)
   _WRAP_METHOD(void connect_proxy(Widget& proxy), gtk_action_connect_proxy)
   _WRAP_METHOD(void disconnect_proxy(Widget& proxy), gtk_action_disconnect_proxy)
-  //TODO: _WRAP_METHOD(GSList* gtk_action_get_proxies            ();
+  _WRAP_METHOD(Glib::SListHandle<Widget*> get_proxies(), gtk_action_get_proxies)
+  _WRAP_METHOD(Glib::SListHandle<const Widget*> get_proxies() const, gtk_action_get_proxies)
   _WRAP_METHOD(void connect_accelerator(), gtk_action_connect_accelerator)
   _WRAP_METHOD(void disconnect_accelerator(), gtk_action_disconnect_accelerator)
 
