@@ -39,10 +39,16 @@ public:
   typedef RadioButtonGroup Group;
 
   _CTOR_DEFAULT()
-  _WRAP_CTOR(RadioToolButton(Group& group), gtk_radio_tool_button_new)
-  _WRAP_CTOR(RadioToolButton(Group& group, const Gtk::StockID& stock_id), gtk_radio_tool_button_new_from_stock)
-  _WRAP_CTOR(RadioToolButton(Widget& group, const Gtk::StockID& stock_id = Gtk::StockID()), gtk_radio_tool_button_new_with_stock_from_widget)
+  explicit RadioToolButton(Group& group, const Glib::ustring& label = Glib::ustring());
+  _IGNORE(gtk_radio_tool_button_new)
+  RadioToolButton(Group& group, const Gtk::StockID& stock_id);
+  _IGNORE(gtk_radio_tool_button_new_from_stock)
 
+  //TODO: Remove this constructor (people can use set_group(get_group) instead),
+  //and add a (Widget, label) constructor like the other toolbuttons?
+  explicit RadioToolButton(RadioToolButton& group, const Gtk::StockID& stock_id = Gtk::StockID());
+  _IGNORE(gtk_radio_tool_button_new_with_stock_from_widget)
+  
   _WRAP_METHOD(Group get_group(), gtk_radio_tool_button_get_group)
   _WRAP_METHOD(void set_group(Group& group), gtk_radio_tool_button_set_group)
 };
