@@ -37,6 +37,8 @@ class ToggleToolButton : public ToolButton
 public:
   _CTOR_DEFAULT()
   _WRAP_CTOR(ToggleToolButton(const Gtk::StockID& stock_id), gtk_toggle_tool_button_new_from_stock)
+  explicit ToggleToolButton(const Glib::ustring& label);
+  explicit ToggleToolButton(Widget& icon_widget, const Glib::ustring& label = Glib::ustring());
 
   _WRAP_METHOD(void set_active(bool is_active = true), gtk_toggle_tool_button_set_active)
   _WRAP_METHOD(bool get_active() const, gtk_toggle_tool_button_get_active)
