@@ -25,5 +25,12 @@
 namespace Gtk
 {
 
+ToolButton::ToolButton(const Glib::ustring& label)
+:
+  Glib::ObjectBase(0), //Mark this class as gtkmmproc-generated, rather than a custom class, to allow vfunc optimisations.
+  Gtk::ToolItem(Glib::ConstructParams(toolbutton_class_.init(), "label", label.c_str(), (char*) 0))
+{
+}
+
 } // namespace Gtk
 
