@@ -37,6 +37,7 @@ class ToolButton : public ToolItem
 public:
   _CTOR_DEFAULT()
   _WRAP_CTOR(ToolButton(const Gtk::StockID& stock_id), gtk_tool_button_new_from_stock)
+  explicit ToolButton(const Glib::ustring& label);
   _WRAP_CTOR(ToolButton(Widget& icon_widget, const Glib::ustring& label = Glib::ustring()), gtk_tool_button_new)
 
   _WRAP_METHOD(void set_label(const Glib::ustring& label), gtk_tool_button_set_label)
