@@ -45,7 +45,7 @@ public:
   _WRAP_METHOD(bool get_expand() const, gtk_tool_item_get_expand)
 
   _WRAP_METHOD(void set_tooltip(Tooltips& tooltips, const Glib::ustring& tip_text, const Glib::ustring& tip_private = Glib::ustring()), gtk_tool_item_set_tooltip)
-
+  
   _WRAP_METHOD(void set_use_drag_window(bool use_drag_window = true), gtk_tool_item_set_use_drag_window)
   _WRAP_METHOD(bool get_use_drag_window() const, gtk_tool_item_get_use_drag_window)
 
