@@ -1,3 +1,11 @@
+2003-11-23  Murray Cumming  <murrayc@usa.net>
+
+	* gtk/src/radiotoolbutton.[hg|ccg]: Manually-implement constructors,
+	because the group is not a property.
+	* examples/book/toolbar: Use the new Toolbar API, to test it, though
+	this example should probably use the UIManager in future.
+	* gtk/gtkmm.h: Added the toolitem headers.
+
 2003-11-22  Murray Cumming  <murrayc@usa.net>
 
 	* gtk/src/toolbar.[hg|ccg]: Deprecated ToolList.
